Sarath.sfp_Dev_Org/src/objects/Role_Names__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>RoleName1__c</fullName>
        <label>RoleName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName2__c</fullName>
        <label>RoleName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName3__c</fullName>
        <label>RoleName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Role Names</label>
</CustomObject>